--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 axum = "0.7.2"
 serde = { version = "1.0.193", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["fs"] }
 
 [dev-dependencies]
 anyhow = "1.0.75"
