--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.7.2", features = ["json"] }
 serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["fs"] }
 
