--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,78 @@ tower-http = { version = "0.5.0", features = ["fs"] }
 [dev-dependencies]
 anyhow = "1.0.79"
 httpc-test = "0.1.1"
+
+[lints.rust]
+# deny
+macro_use_extern_crate = "deny"
+unsafe-code = "deny"
+unsafe-op-in-unsafe-fn = "deny"
+
+# warn
+explicit_outlives_requirements = "warn"
+ffi-unwind-calls = "warn"
+let-underscore-drop = "warn"
+missing-abi = "warn"
+missing-debug-implementations = "warn"
+non-ascii-idents = "warn"
+unreachable-pub = "warn"
+variant-size-differences = "warn"
+# groups
+unused = "warn"
+rust-2018-idioms = "warn"
+rust-2018-compatibility = "warn"
+rust-2021-compatibility = "warn"
+
+[lints.clippy]
+# deny
+wildcard_dependencies = "deny"
+wildcard_enum_match_arm = "deny"
+mod_module_files = "deny"
+
+# warn
+# groups
+pedantic = "warn"
+# individual
+# cargo
+negative_feature_names = "warn"
+redundant_feature_names = "warn"
+# restriction
+alloc_instead_of_core = "warn"
+allow_attributes = "warn"
+arithmetic_side_effects = "warn"
+as_conversions = "warn"
+as_underscore = "warn"
+assertions_on_result_states = "warn"
+create_dir = "warn"
+dbg_macro = "warn"
+decimal_literal_representation = "warn"
+default_union_representation = "warn"
+empty_drop = "warn"
+empty_structs_with_brackets = "warn"
+float_cmp_const = "warn"
+fn_to_numeric_cast_any = "warn"
+format_push_string = "warn"
+if_then_some_else_none = "warn"
+indexing_slicing = "warn"
+integer_division = "warn"
+mem_forget = "warn"
+modulo_arithmetic = "warn"
+needless_raw_strings = "warn"
+panic_in_result_fn = "warn"
+rc_buffer = "warn"
+rc_mutex = "warn"
+same_name_method = "warn"
+semicolon_outside_block = "warn"
+std_instead_of_core = "warn"
+string_lit_chars_any = "warn"
+suspicious_xor_used_as_pow = "warn"
+tests_outside_test_module = "warn"
+todo = "warn"
+try_err = "warn"
+undocumented_unsafe_blocks = "warn"
+unnecessary_safety_comment = "warn"
+unimplemented = "warn"
+unnecessary_self_imports = "warn"
+unneeded_field_pattern = "warn"
+unseparated_literal_suffix = "warn"
+verbose_file_reads = "warn"
